--- a/app/globals.css
+++ b/app/globals.css
@@ -82,6 +82,9 @@
 body {
   font-family: var(--font-montserrat);
 }
+html {
+  scroll-behavior: smooth;
+}
 
 .dark {
   --background: oklch(0.145 0 0);
